# ShadowGate

./: .metadata  LICENSE  README.md  pubspec.yaml
.github/workflows/: build-release.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Plugins/ShadowTunPlugin/: ShadowMtprotoProxy.swift  ShadowTunPlugin.swift  ShadowTunnelProvider.swift
lib/: app.dart  main.dart
lib/core/: constants.dart  platform_utils.dart  types.dart
lib/models/: proxy_config.dart  tun_config.dart
lib/providers/: app_state_provider.dart
lib/services/: dpi_bypass_service.dart  mtproto_proxy_windows.dart  mtproto_service.dart  platform_channel_service.dart  proxy_service.dart  settings_service.dart  socks5_handler.dart  system_tray_service.dart  tun_service.dart
lib/ui/screens/: customization_screen.dart  home_screen.dart  proxy_config_screen.dart  targets_screen.dart  tun_config_screen.dart
lib/ui/theme/: app_theme.dart
lib/ui/widgets/: connection_status.dart  log_viewer.dart  mode_selector.dart  target_list.dart
lib/utils/: logger.dart  validators.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
native/mtproto_proxy/: Cargo.toml  build_android.sh  build_ios.sh  build_windows.bat  mtproto_proxy.h
native/mtproto_proxy/src/: balancer.rs  cfproxy.rs  config.rs  crypto.rs  lib.rs  proxy.rs  win_service.rs  ws.rs
plans/: architecture-plan.md
shadowgate/ios/Runner.xcodeproj/: project.pbxproj
shadowgate/lib/core/: types.dart
shadowgate/lib/models/: app_state.dart  proxy_config.dart  target_config.dart
shadowgate/lib/providers/: log_provider.dart
shadowgate/lib/services/: dpi_bypass_service.dart  proxy_service.dart  socks5_handler.dart  target_manager.dart
shadowgate/lib/ui/screens/: targets_screen.dart
shadowgate/lib/ui/theme/: app_theme.dart
shadowgate/lib/ui/widgets/: connection_status.dart  log_viewer.dart
shadowgate/macos/Runner/Configs/: AppInfo.xcconfig
shadowgate/windows/runner/: main.cpp
windows/: CMakeLists.txt
windows/plugins/shadowgate_tun/: CMakeLists.txt  download_wintun.ps1  shadowgate_tun_plugin.cpp  shadowgate_tun_plugin.h
windows/plugins/shadowgate_tun/include/shadowgate_tun/: shadowgate_tun_plugin.h
windows/plugins/shadowgate_tun/src/: shadowgate_tun_plugin.cpp
windows/runner/: Runner.rc
(+4 files in other folders)
