[package]
name = "mtproto_proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "mtproto_proxy"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }
tokio-util = "0.7"

# TLS for WSS (rustls вместо native-tls — легче, без OpenSSL)
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"

# WebSocket фрейминг (ручная реализация как в Go)
byteorder = "1"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# MTProto шифрование (AES-256-CTR)
aes = "0.8"
ctr = "0.9"
cipher = "0.4"

# HTTP-клиент для DoH/GitHub
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Глобальные состояния
once_cell = "1"
parking_lot = "0.12"

# Socket options (TCP_NODELAY, keepalive)
socket2 = "0.5"

# Логирование
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[target.'cfg(target_os = "windows")'.dependencies]
env_logger = "0.11"

[features]
default = ["android"]
android = []
ios = []
windows = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true